--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "prismjs": "^1.29.0",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.4",
     "vue2-smooth-scroll": "^1.6.0",
     "vuex": "^3.0.0",
@@ -23,6 +27,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
