--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "devtools-detector": "^2.0.14",
     "element-ui": "^2.15.14",
     "prismjs": "^1.29.0",
     "quill-image-drop-module": "^1.0.3",
@@ -30,6 +31,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
